[gd_scene load_steps=8 format=3 uid="uid://bd7y4phsil1xx"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_ysje5"]
[ext_resource type="Material" uid="uid://0asm43bpndbi" path="res://shaders/invert.tres" id="2_t4nrw"]
[ext_resource type="FontFile" uid="uid://csla7xq7lsckw" path="res://fonts/SourceCodePro/SourceCodePro-Bold.otf" id="3_2jc6e"]

[sub_resource type="LabelSettings" id="LabelSettings_i6e8s"]
font = ExtResource("3_2jc6e")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_hnck6"]
color = Color(0, 0, 0, 0.2)
grow_begin = 0.0
grow_end = 0.0
thickness = 3

[sub_resource type="LabelSettings" id="LabelSettings_1du00"]
font = ExtResource("3_2jc6e")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wbg6l"]
color = Color(0, 0, 0, 0.2)
grow_begin = 0.0
grow_end = 0.0
thickness = 3
vertical = true

[node name="MenuContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ysje5")

[node name="MenuLabel" type="Label" parent="."]
material = ExtResource("2_t4nrw")
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 197.0
offset_bottom = 26.0
text = "F1 - Menu"

[node name="Menu" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.99)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 18.0
offset_right = -20.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuHBox" type="HBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Spacer" type="Control" parent="Menu/MenuHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="ScrollContainer" type="ScrollContainer" parent="Menu/MenuHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MenuHBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="FileExport" type="VBoxContainer" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Title" type="Label" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport"]
layout_mode = 2
text = "File / Export"
label_settings = SubResource("LabelSettings_i6e8s")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="NewImageHBox" type="HBoxContainer" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport"]
layout_mode = 2
size_flags_vertical = 3

[node name="NewImage" type="Button" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/NewImageHBox"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "New Image"

[node name="Spacer2" type="Control" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/NewImageHBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="Label3" type="Label" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/NewImageHBox"]
layout_mode = 2
text = "Dimensions (px):"

[node name="Spacer" type="Control" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/NewImageHBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="LineEdit" type="LineEdit" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/NewImageHBox"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "1280"

[node name="Label2" type="Label" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/NewImageHBox"]
layout_mode = 2
text = "x"

[node name="LineEdit2" type="LineEdit" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/NewImageHBox"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "720"

[node name="FileButtons" type="HBoxContainer" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="OpenImage" type="Button" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/FileButtons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Open"

[node name="SaveImage" type="Button" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/FileButtons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Save"

[node name="SaveImageAs" type="Button" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/FileButtons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Save As"

[node name="Spacer2" type="Control" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport"]
layout_mode = 2

[node name="Divider Line" type="Panel" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_hnck6")

[node name="Palettes" type="VBoxContainer" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/Palettes"]
layout_mode = 2
text = "Palettes"
label_settings = SubResource("LabelSettings_i6e8s")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/Palettes"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Divider Line2" type="Panel" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_hnck6")

[node name="SettingsVBox" type="VBoxContainer" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_i6e8s")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="# Window" type="Label" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox"]
layout_mode = 2
text = "# Window"
label_settings = SubResource("LabelSettings_1du00")

[node name="Fullscreen" type="HBoxContainer" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2

[node name="Fullscreen" type="Button" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox/Fullscreen"]
custom_minimum_size = Vector2(21, 0)
layout_mode = 2
focus_mode = 0
toggle_mode = true

[node name="Spacer" type="Control" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox/Fullscreen"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Label" type="Label" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox/Fullscreen"]
layout_mode = 2
text = "Fullscreen"

[node name="Spacer2" type="Control" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="# Viewport" type="Label" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox"]
layout_mode = 2
text = "# Viewport"
label_settings = SubResource("LabelSettings_1du00")

[node name="HideMenuLabel" type="HBoxContainer" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2

[node name="HideMenuLabel" type="Button" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox/HideMenuLabel"]
custom_minimum_size = Vector2(21, 0)
layout_mode = 2
focus_mode = 0
toggle_mode = true

[node name="Spacer" type="Control" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox/HideMenuLabel"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Label" type="Label" parent="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox/HideMenuLabel"]
layout_mode = 2
text = "Hide top-left menu label"

[node name="SpacerLine" type="Control" parent="Menu/MenuHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Divider Line" type="Panel" parent="Menu/MenuHBox/SpacerLine"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.5
offset_top = -342.0
offset_right = 1.5
offset_bottom = 342.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxLine_wbg6l")

[node name="Help" type="ScrollContainer" parent="Menu/MenuHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HelpVBox" type="VBoxContainer" parent="Menu/MenuHBox/Help"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info Title" type="Label" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "Info"
label_settings = SubResource("LabelSettings_i6e8s")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer" type="Control" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="# Drawing" type="Label" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "# Drawing"
label_settings = SubResource("LabelSettings_1du00")
autowrap_mode = 2

[node name="Drawing Info" type="Label" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "Left click to paint.
Use scroll wheel to change brush size."
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="# Viewport" type="Label" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "# Viewport"
label_settings = SubResource("LabelSettings_1du00")
autowrap_mode = 2

[node name="Viewport Info" type="Label" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "Right click & drag to pan view.
Hold shift or ctrl then scroll to zoom.
Press F11 to toggle fullscreen."
autowrap_mode = 2

[node name="Spacer3" type="Control" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="# Functions" type="Label" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "# Functions"
label_settings = SubResource("LabelSettings_1du00")
autowrap_mode = 2

[node name="Function Info" type="Label" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
text = "Hold C before you stop drawing to connect your stroke's end point to its start point."
autowrap_mode = 2

[node name="Spacer4" type="Control" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Credits" type="Label" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "# Credits"
label_settings = SubResource("LabelSettings_1du00")
autowrap_mode = 2

[node name="Label5" type="Label" parent="Menu/MenuHBox/Help/HelpVBox"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
text = "Made by Jo Haynes & Anything Nose Productions
Font: SourceCodePro by Adobe
Default colour palette: UFO 50 by UFO 50"
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="Menu/MenuHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[connection signal="pressed" from="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/NewImageHBox/NewImage" to="." method="_on_new_image_pressed"]
[connection signal="pressed" from="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/FileButtons/OpenImage" to="." method="_on_open_image_pressed"]
[connection signal="pressed" from="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/FileButtons/SaveImage" to="." method="_on_save_image_pressed"]
[connection signal="pressed" from="Menu/MenuHBox/ScrollContainer/VBoxContainer/FileExport/FileButtons/SaveImageAs" to="." method="_on_save_image_as_pressed"]
[connection signal="toggled" from="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox/Fullscreen/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="Menu/MenuHBox/ScrollContainer/VBoxContainer/SettingsVBox/HideMenuLabel/HideMenuLabel" to="." method="_on_hide_menu_label_toggled"]
